k8s/notesapp-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notesapp-deployment
  namespace: notesapp
  labels:
    app: notesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notesapp
  template:
    metadata:
      name: notesapp
      labels:
        app: notesapp
    spec:
      containers:
      - name: notesapp
        image: saleejkuruniyan/notes-app:latest
        command: ["./manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "800m"
