k8s/notesapp-service.yml
kind: Service
apiVersion: v1
metadata:
  name: notesapp-service
  namespace: notesapp
spec:
  selector:
    app: notesapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
