k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: notesapp-ingress
  namespace: notesapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: notesapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notesapp-service
            port:
              number: 8000
